# spbau_homework

./: .gitignore  README.md
Alorithms/theory/: main_hw13.aux  main_hw13.tex
algorithms/contest_150223_aum/: CMakeLists.txt  task_a.cpp  task_b.cpp  task_c.cpp  task_e.cpp  task_f.cpp  task_g.cpp  task_h.cpp  task_i.cpp
algorithms/contest_150615_aum/: CMakeLists.txt  taskA.cpp  taskC.cpp  taskD.cpp  taskE.cpp  taskF.cpp
algorithms/contest_au_14_61/: CMakeLists.txt  taskA.cpp  taskB.cpp  taskC.cpp  taskF.cpp  taskH.cpp  taskI.cpp  taskJ.cpp  taskO.cpp  taskP.cpp
algorithms/contest_au_14_61/taskD/: CMakeLists.txt  main.cpp
c_plus_plus/cw4/: CMakeLists.txt  main.cpp  maybe.h
c_plus_plus/cw_2_3/: CMakeLists.txt  au_allocator.cpp  au_allocator.h  main.cpp
c_plus_plus/ha_2_3/: CMakeLists.txt
c_plus_plus/ptrs/: CMakeLists.txt  main.cpp  singleton.cpp  singleton.h
java/task03/: pom.xml
java/task06/: pom.xml
maching_learning/contest/: main.py  solution.py
maching_learning/least_squares_method/: lsm.py
maching_learning/task2(vine)/: euclidian.txt  vesloguzova_alexandra_2.R
maching_learning/task3/: alexandra_vesloguzova.py  ribosome.fasta
maching_learning/task4/: other.py  vesloguzova.py
maching_learning/task6/: vesloguzova.py
maching_learning/task8/: alexandra_vesloguzova_8.py
maching_learning/task9/: alexandra_vesloguzova_9.py
maching_learning/untitled1/: some.py
statistics/task1/: Boar.R  Marksman.R
statistics/task10/: head.tex  hw.tex  main.tex
statistics/task11/: body.tex  hw11.tex
statistics/task2/: .Rhistory  1.R
statistics/task4/: diabet.py  integral.r  lamps.py  two_problems_1.r  two_problems_2.r
statistics/task5/: cauchy.r  uniform.r
statistics/task8/: sample_c_i.r
statistics/task9/: bootstrap.r
(+112 files in other folders)
