cmake_minimum_required(VERSION 2.8.4)
project(contest_150223_aum)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")


add_executable(task_h task_h.cpp)
add_executable(task_a task_a.cpp)
add_executable(task_c task_c.cpp)
add_executable(task_b task_b.cpp)
add_executable(task_g task_g.cpp)
add_executable(task_e task_e.cpp)
add_executable(task_f task_f.cpp)