cmake_minimum_required(VERSION 3.2)
project(contest_au_14_61)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES taskO.cpp)
add_executable(taskO ${SOURCE_FILES} )
set(SOURCE_FILES taskP.cpp)
add_executable(taskP ${SOURCE_FILES} )
set(SOURCE_FILES taskF.cpp)
add_executable(taskF ${SOURCE_FILES} )
set(SOURCE_FILES taskC.cpp)
add_executable(taskC ${SOURCE_FILES} )
set(SOURCE_FILES taskA.cpp)
add_executable(taskA ${SOURCE_FILES} )
set(SOURCE_FILES taskB.cpp)
add_executable(taskB ${SOURCE_FILES} )
set(SOURCE_FILES taskH.cpp)
add_executable(taskH ${SOURCE_FILES} )
set(SOURCE_FILES taskI.cpp)
add_executable(taskI ${SOURCE_FILES} )
set(SOURCE_FILES taskJ.cpp)
add_executable(taskJ ${SOURCE_FILES} )